; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/nvi/common/extr_conv.c_codeset.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/nvi/common/extr_conv.c_codeset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@codeset.cs = internal global i8* null, align 8
@CODESET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @codeset() #0 {
  %1 = load i8*, i8** @codeset.cs, align 8
  %2 = icmp eq i8* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @CODESET, align 4
  %5 = call i8* @nl_langinfo(i32 %4)
  store i8* %5, i8** @codeset.cs, align 8
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i8*, i8** @codeset.cs, align 8
  ret i8* %7
}

declare dso_local i8* @nl_langinfo(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
